# openobserve-community-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
openobserve_mcp/: __init__.py  cli.py  config.py  errors.py  openobserve_client.py  server.py  tool_outputs.py
tests/: test_config.py  test_openobserve_client.py  test_server.py  test_tool_outputs.py
